# star-ai-agent

./: .dockerignore  .env.example  README.md  index.html  inspect_tool.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  test_api.py  test_backend.py  test_proxy.py  vercel.json
agent/: graph.py  state.py  tools.py
frontend/: index.html  vite.config.ts
frontend/assets/: index-9tBSsEBy.css  index-CI1JeDXM.js
frontend/src/: index.css
src/: App.tsx
tests/: test_main.py  test_state.py
