[project]
name = "croo-weather-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "croo-sdk>=0.2.1",
    "fastapi>=0.138.1",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]
